8224580: Matcher can cause oop field/array element to be reloaded

Reviewed-by: neliasso, rkennke, dlong